--- a/newsite/site21/whoweare.html
+++ b/newsite/site21/whoweare.html
@@ -379,7 +379,7 @@ z-index: 0;
 }
 </style>
 <img id=line src="assets/main/assets_general/moving/underline.png" />
-<a href="m01_1.html">
+<a href="interactive.html">
 <img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
 </a>
 <img id=au src="assets/margin_left/assets_deselected/aboutus.png" />
