--- a/newsite/site21/clients.html
+++ b/newsite/site21/clients.html
@@ -282,7 +282,7 @@ visibility: hidden;
 }
 </style>
 <img id=gsbr3 src="assets/main/assets_general/stationary/semiborder_r_3.png" />
-<a href="m01_1.html">
+<a href="interactive.html">
 <img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
 </a>
 <img id=au src="assets/margin_left/assets_deselected/aboutus.png" />
