--- a/newsite/site21/etcetera.html
+++ b/newsite/site21/etcetera.html
@@ -1,5 +1,12 @@
 <html><body>
-<style>#dint {
+<style>#gsbb {
+position: absolute;left: 391px;
+top: 215px;
+z-index: -1;
+overflow: hidden;
+border: 0px;
+}
+#dint {
 position: absolute;left: 735px;
 top: 558px;
 z-index: 0;
@@ -235,116 +242,129 @@ border: 0px;
 position: absolute;
 left: 391px;
 top: 215px;
+z-index: 0;
 visibility: visible;
 }
 #img_nmr {
 position: absolute;
 left: 391px;
 top: 180px;
+z-index: 0;
 visibility: visible;
 }
 #img_naw {
 position: absolute;
 left: 623px;
 top: 180px;
+z-index: 0;
 visibility: visible;
 }
 #img_ncw {
 position: absolute;
 left: 706px;
 top: 180px;
+z-index: 0;
 visibility: visible;
 }
 #img_n3m {
 position: absolute;
 left: 391px;
 top: 215px;
+z-index: 0;
 visibility: hidden;
 }
 #img_nmw {
 position: absolute;
 left: 391px;
 top: 180px;
+z-index: 0;
 visibility: hidden;
 }
 #img_naw2 {
 position: absolute;
 left: 623px;
 top: 180px;
+z-index: 0;
 visibility: hidden;
 }
 #img_ncr {
 position: absolute;
 left: 706px;
 top: 180px;
+z-index: 0;
 visibility: hidden;
 }
 #img_n2m {
 position: absolute;
 left: 391px;
 top: 215px;
+z-index: 0;
 visibility: hidden;
 }
 #img_nmw2 {
 position: absolute;
 left: 391px;
 top: 180px;
+z-index: 0;
 visibility: hidden;
 }
 #img_nar {
 position: absolute;
 left: 623px;
 top: 180px;
+z-index: 0;
 visibility: hidden;
 }
 #img_ncw2 {
 position: absolute;
 left: 706px;
 top: 180px;
+z-index: 0;
 visibility: hidden;
 }
 </style>
-<a href="m01_1.html">
+<img id=gsbb src="assets/main/assets_general/stationary/semiborder_b.png" />
+<a href="interactive.html">
 <img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
 </a>
 <img id=au src="assets/margin_left/assets_deselected/aboutus.png" />
-<a href="c01.html">
+<a href="whoweare.html">
 <img id=dwwa src="assets/margin_left/assets_deselected/d_whoweare.png" onmouseover="document.getElementById('dwwaline').style.visibility='visible';document.getElementById('dwwaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwwaline').style.visibility='hidden';"  />
 </a>
 <img id=logo src="assets/margin_left/assets_deselected/logo.png" />
 <img id=conline src="assets/main/assets_general/moving/underline.png" />
-<a href="b01.html">
+<a href="home.html">
 <img id=dwv src="assets/margin_left/assets_deselected/d_watchvideo.png" onmouseover="document.getElementById('dwvline').style.visibility='visible';document.getElementById('dwvline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwvline').style.visibility='hidden';"  />
 </a>
-<a href="o01.html">
+<a href="sneakpeek.html">
 <img id=lm src="assets/margin_top/learnmore.png" />
 </a>
-<a href="o01.html">
+<a href="sneakpeek.html">
 <img id=ts src="assets/margin_top/text_sneak.png" />
 </a>
-<a href="i01.html">
+<a href="community.html">
 <img id=dcom src="assets/margin_left/assets_deselected/d_community.png" onmouseover="document.getElementById('dcomline').style.visibility='visible';document.getElementById('dcomline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcomline').style.visibility='hidden';"  />
 </a>
-<a href="o01.html">
+<a href="sneakpeek.html">
 <img id=td src="assets/margin_top/text_descr.png" />
 </a>
 <a href="k01.html">
 <img id=dan src="assets/margin_bottom/assets_deselected/d_animation.png" onmouseover="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_selected/s_animation.png'" onmouseout="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_deselected/d_animation.png'"  />
 </a>
 <img id=dcomline src="assets/main/assets_general/moving/underline.png" />
-<a href="f01.html">
+<a href="clients.html">
 <img id=dcl src="assets/margin_left/assets_deselected/d_clients.png" onmouseover="document.getElementById('dcline').style.visibility='visible';document.getElementById('dcline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcline').style.visibility='hidden';"  />
 </a>
 <img id=dphline src="assets/main/assets_general/moving/underline.png" />
 <img id=wo src="assets/margin_bottom/assets_deselected/work.png" />
 <img id=bm src="assets/margin_top/banner_margin.png" />
-<a href="g01.html">
+<a href="contacts.html">
 <img id=dcd src="assets/margin_left/assets_deselected/d_contactdetails.png" onmouseover="document.getElementById('conline').style.visibility='visible';document.getElementById('conline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('conline').style.visibility='hidden';"  />
 </a>
-<a href="h01.html">
+<a href="map.html">
 <img id=dmap src="assets/margin_left/assets_deselected/d_map.png" onmouseover="document.getElementById('dmapline').style.visibility='visible';document.getElementById('dmapline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dmapline').style.visibility='hidden';"  />
 </a>
-<a href="o01.html">
+<a href="sneakpeek.html">
 <img id=bs src="assets/margin_top/banner_sneak.png" />
 </a>
 <img id=dpaline src="assets/main/assets_general/moving/underline.png" />
@@ -358,26 +378,26 @@ visibility: hidden;
 <img id=dwwaline src="assets/main/assets_general/moving/underline.png" />
 <img id=setc src="assets/margin_bottom/assets_selected/s_etcetera.png" />
 <img id=dcline src="assets/main/assets_general/moving/underline.png" />
-<a href="d01.html">
+<a href="partners.html">
 <img id=dpa src="assets/margin_left/assets_deselected/d_partners.png" onmouseover="document.getElementById('dpaline').style.visibility='visible';document.getElementById('dpaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dpaline').style.visibility='hidden';"  />
 </a>
 <img id=dmapline src="assets/main/assets_general/moving/underline.png" />
 <img id=dwvline src="assets/main/assets_general/moving/underline.png" />
 <img id=con src="assets/margin_left/assets_deselected/contact.png" />
 <img id=se src="assets/margin_top/search.png" />
-<a href="e01.html">
+<a href="photos.html">
 <img id=dph src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';"  />
 </a>
-<img id=img_n1m src="assets/main/N/n01_main.png" >
-<img id=img_nmr src="assets/main/N/n_mot_r.png" >
-<img id=img_naw src="assets/main/N/n_axe_w.png" onclick="document.getElementById('img_n1m').style.visibility='hidden';document.getElementById('img_nmr').style.visibility='hidden';document.getElementById('img_naw').style.visibility='hidden';document.getElementById('img_ncw').style.visibility='hidden';document.getElementById('img_n3m').style.visibility='hidden';document.getElementById('img_nmw').style.visibility='hidden';document.getElementById('img_naw2').style.visibility='hidden';document.getElementById('img_ncr').style.visibility='hidden';document.getElementById('img_n2m').style.visibility='visible';document.getElementById('img_nmw2').style.visibility='visible';document.getElementById('img_nar').style.visibility='visible';document.getElementById('img_ncw2').style.visibility='visible';" >
-<img id=img_ncw src="assets/main/N/n_city_w.png" onclick="document.getElementById('img_n1m').style.visibility='hidden';document.getElementById('img_nmr').style.visibility='hidden';document.getElementById('img_naw').style.visibility='hidden';document.getElementById('img_ncw').style.visibility='hidden';document.getElementById('img_n3m').style.visibility='visible';document.getElementById('img_nmw').style.visibility='visible';document.getElementById('img_naw2').style.visibility='visible';document.getElementById('img_ncr').style.visibility='visible';document.getElementById('img_n2m').style.visibility='hidden';document.getElementById('img_nmw2').style.visibility='hidden';document.getElementById('img_nar').style.visibility='hidden';document.getElementById('img_ncw2').style.visibility='hidden';" >
-<img id=img_n3m src="assets/main/N/n03_main.png" >
-<img id=img_nmw src="assets/main/N/n_mot_w.png" onclick="document.getElementById('img_n1m').style.visibility='visible';document.getElementById('img_nmr').style.visibility='visible';document.getElementById('img_naw').style.visibility='visible';document.getElementById('img_ncw').style.visibility='visible';document.getElementById('img_n3m').style.visibility='hidden';document.getElementById('img_nmw').style.visibility='hidden';document.getElementById('img_naw2').style.visibility='hidden';document.getElementById('img_ncr').style.visibility='hidden';document.getElementById('img_n2m').style.visibility='hidden';document.getElementById('img_nmw2').style.visibility='hidden';document.getElementById('img_nar').style.visibility='hidden';document.getElementById('img_ncw2').style.visibility='hidden';" >
-<img id=img_naw2 src="assets/main/N/n_axe_w.png" onclick="document.getElementById('img_n1m').style.visibility='hidden';document.getElementById('img_nmr').style.visibility='hidden';document.getElementById('img_naw').style.visibility='hidden';document.getElementById('img_ncw').style.visibility='hidden';document.getElementById('img_n3m').style.visibility='hidden';document.getElementById('img_nmw').style.visibility='hidden';document.getElementById('img_naw2').style.visibility='hidden';document.getElementById('img_ncr').style.visibility='hidden';document.getElementById('img_n2m').style.visibility='visible';document.getElementById('img_nmw2').style.visibility='visible';document.getElementById('img_nar').style.visibility='visible';document.getElementById('img_ncw2').style.visibility='visible';" >
-<img id=img_ncr src="assets/main/N/n_city_r.png" >
-<img id=img_n2m src="assets/main/N/n02_main.png" >
-<img id=img_nmw2 src="assets/main/N/n_mot_w.png" onclick="document.getElementById('img_n1m').style.visibility='visible';document.getElementById('img_nmr').style.visibility='visible';document.getElementById('img_naw').style.visibility='visible';document.getElementById('img_ncw').style.visibility='visible';document.getElementById('img_n3m').style.visibility='hidden';document.getElementById('img_nmw').style.visibility='hidden';document.getElementById('img_naw2').style.visibility='hidden';document.getElementById('img_ncr').style.visibility='hidden';document.getElementById('img_n2m').style.visibility='hidden';document.getElementById('img_nmw2').style.visibility='hidden';document.getElementById('img_nar').style.visibility='hidden';document.getElementById('img_ncw2').style.visibility='hidden';" >
-<img id=img_nar src="assets/main/N/n_axe_r.png" >
-<img id=img_ncw2 src="assets/main/N/n_city_w.png" onclick="document.getElementById('img_n1m').style.visibility='hidden';document.getElementById('img_nmr').style.visibility='hidden';document.getElementById('img_naw').style.visibility='hidden';document.getElementById('img_ncw').style.visibility='hidden';document.getElementById('img_n3m').style.visibility='visible';document.getElementById('img_nmw').style.visibility='visible';document.getElementById('img_naw2').style.visibility='visible';document.getElementById('img_ncr').style.visibility='visible';document.getElementById('img_n2m').style.visibility='hidden';document.getElementById('img_nmw2').style.visibility='hidden';document.getElementById('img_nar').style.visibility='hidden';document.getElementById('img_ncw2').style.visibility='hidden';" >
+<img id=img_n1m src="assets/main/N/n01_main.png" onmouseover="" onmouseout="" >
+<img id=img_nmr src="assets/main/N/n_mot_r.png" onmouseover="" onmouseout="" >
+<img id=img_naw src="assets/main/N/n_axe_w.png" onclick="document.getElementById('img_n1m').style.visibility='hidden';document.getElementById('img_nmr').style.visibility='hidden';document.getElementById('img_naw').style.visibility='hidden';document.getElementById('img_ncw').style.visibility='hidden';document.getElementById('img_n3m').style.visibility='hidden';document.getElementById('img_nmw').style.visibility='hidden';document.getElementById('img_naw2').style.visibility='hidden';document.getElementById('img_ncr').style.visibility='hidden';document.getElementById('img_n2m').style.visibility='visible';document.getElementById('img_nmw2').style.visibility='visible';document.getElementById('img_nar').style.visibility='visible';document.getElementById('img_ncw2').style.visibility='visible';" onmouseover="" onmouseout="" >
+<img id=img_ncw src="assets/main/N/n_city_w.png" onclick="document.getElementById('img_n1m').style.visibility='hidden';document.getElementById('img_nmr').style.visibility='hidden';document.getElementById('img_naw').style.visibility='hidden';document.getElementById('img_ncw').style.visibility='hidden';document.getElementById('img_n3m').style.visibility='visible';document.getElementById('img_nmw').style.visibility='visible';document.getElementById('img_naw2').style.visibility='visible';document.getElementById('img_ncr').style.visibility='visible';document.getElementById('img_n2m').style.visibility='hidden';document.getElementById('img_nmw2').style.visibility='hidden';document.getElementById('img_nar').style.visibility='hidden';document.getElementById('img_ncw2').style.visibility='hidden';" onmouseover="" onmouseout="" >
+<img id=img_n3m src="assets/main/N/n03_main.png" onmouseover="" onmouseout="" >
+<img id=img_nmw src="assets/main/N/n_mot_w.png" onclick="document.getElementById('img_n1m').style.visibility='visible';document.getElementById('img_nmr').style.visibility='visible';document.getElementById('img_naw').style.visibility='visible';document.getElementById('img_ncw').style.visibility='visible';document.getElementById('img_n3m').style.visibility='hidden';document.getElementById('img_nmw').style.visibility='hidden';document.getElementById('img_naw2').style.visibility='hidden';document.getElementById('img_ncr').style.visibility='hidden';document.getElementById('img_n2m').style.visibility='hidden';document.getElementById('img_nmw2').style.visibility='hidden';document.getElementById('img_nar').style.visibility='hidden';document.getElementById('img_ncw2').style.visibility='hidden';" onmouseover="" onmouseout="" >
+<img id=img_naw2 src="assets/main/N/n_axe_w.png" onclick="document.getElementById('img_n1m').style.visibility='hidden';document.getElementById('img_nmr').style.visibility='hidden';document.getElementById('img_naw').style.visibility='hidden';document.getElementById('img_ncw').style.visibility='hidden';document.getElementById('img_n3m').style.visibility='hidden';document.getElementById('img_nmw').style.visibility='hidden';document.getElementById('img_naw2').style.visibility='hidden';document.getElementById('img_ncr').style.visibility='hidden';document.getElementById('img_n2m').style.visibility='visible';document.getElementById('img_nmw2').style.visibility='visible';document.getElementById('img_nar').style.visibility='visible';document.getElementById('img_ncw2').style.visibility='visible';" onmouseover="" onmouseout="" >
+<img id=img_ncr src="assets/main/N/n_city_r.png" onmouseover="" onmouseout="" >
+<img id=img_n2m src="assets/main/N/n02_main.png" onmouseover="" onmouseout="" >
+<img id=img_nmw2 src="assets/main/N/n_mot_w.png" onclick="document.getElementById('img_n1m').style.visibility='visible';document.getElementById('img_nmr').style.visibility='visible';document.getElementById('img_naw').style.visibility='visible';document.getElementById('img_ncw').style.visibility='visible';document.getElementById('img_n3m').style.visibility='hidden';document.getElementById('img_nmw').style.visibility='hidden';document.getElementById('img_naw2').style.visibility='hidden';document.getElementById('img_ncr').style.visibility='hidden';document.getElementById('img_n2m').style.visibility='hidden';document.getElementById('img_nmw2').style.visibility='hidden';document.getElementById('img_nar').style.visibility='hidden';document.getElementById('img_ncw2').style.visibility='hidden';" onmouseover="" onmouseout="" >
+<img id=img_nar src="assets/main/N/n_axe_r.png" onmouseover="" onmouseout="" >
+<img id=img_ncw2 src="assets/main/N/n_city_w.png" onclick="document.getElementById('img_n1m').style.visibility='hidden';document.getElementById('img_nmr').style.visibility='hidden';document.getElementById('img_naw').style.visibility='hidden';document.getElementById('img_ncw').style.visibility='hidden';document.getElementById('img_n3m').style.visibility='visible';document.getElementById('img_nmw').style.visibility='visible';document.getElementById('img_naw2').style.visibility='visible';document.getElementById('img_ncr').style.visibility='visible';document.getElementById('img_n2m').style.visibility='hidden';document.getElementById('img_nmw2').style.visibility='hidden';document.getElementById('img_nar').style.visibility='hidden';document.getElementById('img_ncw2').style.visibility='hidden';" onmouseover="" onmouseout="" >
 </body></html>
