--- a/newsite/site21/last/animation.html
+++ b/newsite/site21/last/animation.html
@@ -1,9 +1,8 @@
-<html>
-<body>
-<style>#gsbb {
-position: absolute;left: 391px;
-top: 215px;
-z-index: -1;
+<html><body>
+<style>#gagr {
+position: absolute;left: 1161px;
+top: 497px;
+z-index: 0;
 overflow: hidden;
 border: 0px;
 }
@@ -129,7 +128,7 @@ z-index: 0;
 overflow: hidden;
 border: 0px;
 }
-#smap {
+#dmap {
 position: absolute;left: 139px;
 top: 405px;
 z-index: 0;
@@ -239,59 +238,171 @@ z-index: 0;
 overflow: hidden;
 border: 0px;
 }
-#img_map {
+#ss_animation1_1 {
+ top:0px;
+ left:0px;
+ visibility:visible;
+}
+#mov_bumble {
 position: absolute;
-left: 392px;
-top: 233px;
-z-index: 0;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_2 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_1 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_3 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_2 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_4 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_3 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_5 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_4 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_6 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_5 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_7 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_6 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_8 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_7 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_9 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_8 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_10 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_9 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_11 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_10 {
+position: absolute;
+left: 391px;
+top: 243px;
+}
+#ss_animation1_12 {
+ top:0px;
+ left:0px;
+ visibility:hidden;
+}
+#mov_bumble_11 {
+position: absolute;
+left: 391px;
+top: 243px;
 }
 </style>
-<script>
-
-function docload () { document.getElementById('img_map').style.visibility = 'visible';; } 
-
- window.onload=docload;
-</script>
-<img id=gsbb src="assets/main/assets_general/stationary/semiborder_b.png" />
-<a href="interactive.html">
+<a href="link.html">
+<img id=gagr src="assets/main/assets_general/moving/arrow_r_g.png" />
+</a>
+<a href="m01_1.html">
 <img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
 </a>
 <img id=au src="assets/margin_left/assets_deselected/aboutus.png" />
-<a href="whoweare.html">
+<a href="c01.html">
 <img id=dwwa src="assets/margin_left/assets_deselected/d_whoweare.png" onmouseover="document.getElementById('dwwaline').style.visibility='visible';document.getElementById('dwwaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwwaline').style.visibility='hidden';"  />
 </a>
 <img id=logo src="assets/margin_left/assets_deselected/logo.png" />
 <img id=conline src="assets/main/assets_general/moving/underline.png" />
-<a href="home.html">
+<a href="b01.html">
 <img id=dwv src="assets/margin_left/assets_deselected/d_watchvideo.png" onmouseover="document.getElementById('dwvline').style.visibility='visible';document.getElementById('dwvline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dwvline').style.visibility='hidden';"  />
 </a>
-<a href="sneakpeek.html">
+<a href="o01.html">
 <img id=lm src="assets/margin_top/learnmore.png" />
 </a>
-<a href="sneakpeek.html">
+<a href="o01.html">
 <img id=ts src="assets/margin_top/text_sneak.png" />
 </a>
-<a href="community.html">
+<a href="i01.html">
 <img id=dcom src="assets/margin_left/assets_deselected/d_community.png" onmouseover="document.getElementById('dcomline').style.visibility='visible';document.getElementById('dcomline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcomline').style.visibility='hidden';"  />
 </a>
-<a href="sneakpeek.html">
+<a href="o01.html">
 <img id=td src="assets/margin_top/text_descr.png" />
 </a>
 <a href="k01.html">
 <img id=dan src="assets/margin_bottom/assets_deselected/d_animation.png" onmouseover="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_selected/s_animation.png'" onmouseout="document.getElementById('dan').style.visibility='visible';document.getElementById('dan').src='assets/margin_bottom/assets_deselected/d_animation.png'"  />
 </a>
 <img id=dcomline src="assets/main/assets_general/moving/underline.png" />
-<a href="clients.html">
+<a href="f01.html">
 <img id=dcl src="assets/margin_left/assets_deselected/d_clients.png" onmouseover="document.getElementById('dcline').style.visibility='visible';document.getElementById('dcline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dcline').style.visibility='hidden';"  />
 </a>
 <img id=dphline src="assets/main/assets_general/moving/underline.png" />
 <img id=wo src="assets/margin_bottom/assets_deselected/work.png" />
 <img id=bm src="assets/margin_top/banner_margin.png" />
-<a href="contacts.html">
+<a href="g01.html">
 <img id=dcd src="assets/margin_left/assets_deselected/d_contactdetails.png" onmouseover="document.getElementById('conline').style.visibility='visible';document.getElementById('conline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('conline').style.visibility='hidden';"  />
 </a>
-<img id=smap src="assets/margin_left/assets_selected/s_map.png" />
-<a href="sneakpeek.html">
+<a href="h01.html">
+<img id=dmap src="assets/margin_left/assets_deselected/d_map.png" onmouseover="document.getElementById('dmapline').style.visibility='visible';document.getElementById('dmapline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dmapline').style.visibility='hidden';"  />
+</a>
+<a href="o01.html">
 <img id=bs src="assets/margin_top/banner_sneak.png" />
 </a>
 <img id=dpaline src="assets/main/assets_general/moving/underline.png" />
@@ -307,16 +418,50 @@ function docload () { document.getElementById('img_map').style.visibility = 'vis
 <img id=detc src="assets/margin_bottom/assets_deselected/d_etcetera.png" onmouseover="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_selected/s_etcetera.png'" onmouseout="document.getElementById('detc').style.visibility='visible';document.getElementById('detc').src='assets/margin_bottom/assets_deselected/d_etcetera.png'"  />
 </a>
 <img id=dcline src="assets/main/assets_general/moving/underline.png" />
-<a href="partners.html">
+<a href="d01.html">
 <img id=dpa src="assets/margin_left/assets_deselected/d_partners.png" onmouseover="document.getElementById('dpaline').style.visibility='visible';document.getElementById('dpaline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dpaline').style.visibility='hidden';"  />
 </a>
 <img id=dmapline src="assets/main/assets_general/moving/underline.png" />
 <img id=dwvline src="assets/main/assets_general/moving/underline.png" />
 <img id=con src="assets/margin_left/assets_deselected/contact.png" />
 <img id=se src="assets/margin_top/search.png" />
-<a href="photos.html">
+<a href="e01.html">
 <img id=dph src="assets/margin_left/assets_deselected/d_photos.png" onmouseover="document.getElementById('dphline').style.visibility='visible';document.getElementById('dphline').src='assets/main/assets_general/moving/underline.png'" onmouseout="document.getElementById('dphline').style.visibility='hidden';"  />
 </a>
-<img id=img_map src="assets/main/H/h01_main.png" onmouseover="" onmouseout="" >
-
+<div id=ss_animation1_1 >
+<video controls id=mov_bumble ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_2 >
+<video controls id=mov_bumble_1 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_3 >
+<video controls id=mov_bumble_2 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_4 >
+<video controls id=mov_bumble_3 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_5 >
+<video controls id=mov_bumble_4 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_6 >
+<video controls id=mov_bumble_5 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_7 >
+<video controls id=mov_bumble_6 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_8 >
+<video controls id=mov_bumble_7 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_9 >
+<video controls id=mov_bumble_8 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_10 >
+<video controls id=mov_bumble_9 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_11 >
+<video controls id=mov_bumble_10 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
+<div id=ss_animation1_12 >
+<video controls id=mov_bumble_11 ><source src="../movies/Video Files For Web/animation/h264/01_Bumbleville.mov" /></video>
+</div>
 </body></html>
