--- a/newsite/site21/interactive.html
+++ b/newsite/site21/interactive.html
@@ -574,14 +574,14 @@ visibility: inherit;
 position: absolute;
 left: 992px;
 top: 469px;
-z-index: 0;
+z-index: 2;
 visibility: inherit;
 }
 #img_m3c2d {
 position: absolute;
 left: 818px;
-top: 324px;
-z-index: 0;
+top: 325px;
+z-index: 2;
 visibility: inherit;
 }
 #img_gagl7 {
@@ -793,28 +793,44 @@ function docload () { document.getElementById('ss_interactive_website_1').style.
 <img id=img_gagl1 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_interactive_website_4 ();" onmouseover="" onmouseout="" >
 <img id=img_gagr1 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_interactive_website_2 ();" onmouseover="" onmouseout="" >
 <img id=img_gsbb1 src="assets/main/assets_general/stationary/semiborder_b.png" onmouseover="" onmouseout="" >
+<a href=appdesign.html >
+
 <img id=img_m1appdesign1 src="assets/main/M/m01_appdesign.png" onmouseover="" onmouseout="" >
+</a>
+
 </div>
 <div id=ss_interactive_website_2 >
 <img id=img_m1m2 src="assets/main/M/m01_2_main.png" onclick="func_ss_interactive_website_3 ();" onmouseover="" onmouseout="" >
 <img id=img_gagl2 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_interactive_website_1 ();" onmouseover="" onmouseout="" >
 <img id=img_gagr2 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_interactive_website_3 ();" onmouseover="" onmouseout="" >
 <img id=img_gsbb2 src="assets/main/assets_general/stationary/semiborder_b.png" onmouseover="" onmouseout="" >
+<a href=appdesign.html >
+
 <img id=img_m1appdesign2 src="assets/main/M/m01_appdesign.png" onmouseover="" onmouseout="" >
+</a>
+
 </div>
 <div id=ss_interactive_website_3 >
 <img id=img_m1m3 src="assets/main/M/m01_3_main.png" onclick="func_ss_interactive_website_4 ();" onmouseover="" onmouseout="" >
 <img id=img_gagl3 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_interactive_website_2 ();" onmouseover="" onmouseout="" >
 <img id=img_gagr3 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_interactive_website_4 ();" onmouseover="" onmouseout="" >
 <img id=img_gsbb3 src="assets/main/assets_general/stationary/semiborder_b.png" onmouseover="" onmouseout="" >
+<a href=motiondesign.html >
+
 <img id=img_m1motiondesign1 src="assets/main/M/m01_motiondesign.png" onmouseover="" onmouseout="" >
+</a>
+
 </div>
 <div id=ss_interactive_website_4 >
 <img id=img_m1m4 src="assets/main/M/m01_4_main.png" onclick="func_ss_interactive_website_1 ();" onmouseover="" onmouseout="" >
 <img id=img_gagl4 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_interactive_website_3 ();" onmouseover="" onmouseout="" >
 <img id=img_gagr4 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_interactive_website_1 ();" onmouseover="" onmouseout="" >
 <img id=img_gsbb4 src="assets/main/assets_general/stationary/semiborder_b.png" onmouseover="" onmouseout="" >
+<a href=motiondesign.html >
+
 <img id=img_m1motiondesign2 src="assets/main/M/m01_motiondesign.png" onmouseover="" onmouseout="" >
+</a>
+
 </div>
 </div>
 <img id=img_maw1 src="assets/main/M/m_app_w.png" onclick="func_menu_interactive_appdesign ();" onmouseover="" onmouseout="" >
@@ -846,20 +862,36 @@ function docload () { document.getElementById('ss_interactive_website_1').style.
 <div id=ss_interactive_appdesign >
 <div id=ss_interactive_appdesign_1 >
 <img id=img_m3m1 src="assets/main/M/m03_1_main.png" onclick="func_ss_interactive_appdesign_2 ();" onmouseover="" onmouseout="" >
+<a href=http://itunes.apple.com/us/app/the-studio-app/id503937794?mt=8 >
+
 <img id=img_appstore src="assets/main/M/m03_1_appstore.png" onmouseover="" onmouseout="" >
+</a>
+
+<a href=http://codetodesign.com/ >
+
 <img id=img_m3c2d src="assets/main/M/m03_1_c2d.png" onmouseover="" onmouseout="" >
+</a>
+
 <img id=img_gagl7 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_interactive_appdesign_3 ();" onmouseover="" onmouseout="" >
 <img id=img_gagr7 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_interactive_appdesign_2 ();" onmouseover="" onmouseout="" >
 </div>
 <div id=ss_interactive_appdesign_2 >
 <img id=img_m3m2 src="assets/main/M/m03_2_main.png" onclick="func_ss_interactive_appdesign_3 ();" onmouseover="" onmouseout="" >
+<a href=motiondesign.html >
+
 <img id=img_m1motiondesign3 src="assets/main/M/m01_motiondesign.png" onmouseover="" onmouseout="" >
+</a>
+
 <img id=img_gagl8 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_interactive_appdesign_1 ();" onmouseover="" onmouseout="" >
 <img id=img_gagr8 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_interactive_appdesign_3 ();" onmouseover="" onmouseout="" >
 </div>
 <div id=ss_interactive_appdesign_3 >
 <img id=img_m3m3 src="assets/main/M/m03_3_main.png" onclick="func_ss_interactive_appdesign_1 ();" onmouseover="" onmouseout="" >
+<a href=webdesign.html >
+
 <img id=img_m3webdesign src="assets/main/M/m03_2_webdesign.png" onmouseover="" onmouseout="" >
+</a>
+
 <img id=img_gagl9 src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_interactive_appdesign_2 ();" onmouseover="" onmouseout="" >
 <img id=img_gagr9 src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_interactive_appdesign_1 ();" onmouseover="" onmouseout="" >
 </div>
