--- a/newsite/site21/clients.html
+++ b/newsite/site21/clients.html
@@ -1,9 +1,9 @@
 <html>
 <body>
-<style>#gsbr3 {
+<style>#gsbb {
 position: absolute;left: 391px;
 top: 215px;
-z-index: 0;
+z-index: -1;
 overflow: hidden;
 border: 0px;
 }
@@ -292,7 +292,7 @@ function docload () { document.getElementById('img_f1m').style.visibility = 'hid
 
  window.onload=docload;
 </script>
-<img id=gsbr3 src="assets/main/assets_general/stationary/semiborder_r_3.png" />
+<img id=gsbb src="assets/main/assets_general/stationary/semiborder_b.png" />
 <a href="interactive.html">
 <img id=dint src="assets/margin_bottom/assets_deselected/d_interactive.png" onmouseover="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_selected/s_interactive.png'" onmouseout="document.getElementById('dint').style.visibility='visible';document.getElementById('dint').src='assets/margin_bottom/assets_deselected/d_interactive.png'"  />
 </a>
