--- a/newsite/beta03/previs.html
+++ b/newsite/beta03/previs.html
@@ -952,7 +952,7 @@ function cpo2_14_sel_click() {}
 function cpo2_22_sel_click() {} 
 function cpo2_11_desel_click() { show( cp_char_dev_2_desel ); hide( cp_char_dev_2_sel ); show( 'cpo2_11_sel' ); hide( 'cpo2_11_desel' );  cp_char_dev_2_sel = 'cpo2_11_sel'; cp_char_dev_2_desel = 'cpo2_11_desel'; preview( 'cpo_main2','../phil_assets/previsualization/character development/12_duck.png' );} 
 function cpo2_33_desel_click() { show( cp_char_dev_2_desel ); hide( cp_char_dev_2_sel ); show( 'cpo2_33_sel' ); hide( 'cpo2_33_desel' );  cp_char_dev_2_sel = 'cpo2_33_sel'; cp_char_dev_2_desel = 'cpo2_33_desel'; preview( 'cpo_main2','../phil_assets/previsualization/character development/22-pig.png' );} 
-function cpo2_34_desel_click() { show( cp_char_dev_2_desel ); hide( cp_char_dev_2_sel ); show( 'cpo2_34_sel' ); hide( 'cpo2_34_desel' );  cp_char_dev_2_sel = 'cpo2_34_sel'; cp_char_dev_2_desel = 'cpo2_34_desel'; preview( 'cpo_main2','../phil_assets/previsualization/character\ development/thumbnails/23-Goodie_Meanie.png' );} 
+function cpo2_34_desel_click() { show( cp_char_dev_2_desel ); hide( cp_char_dev_2_sel ); show( 'cpo2_34_sel' ); hide( 'cpo2_34_desel' );  cp_char_dev_2_sel = 'cpo2_34_sel'; cp_char_dev_2_desel = 'cpo2_34_desel'; preview( 'cpo_main2','../phil_assets/previsualization/character development/thumbnails/23-Goodie_Meanie.png' );} 
 function cpo2_32_sel_click() {} 
 function cpo2_34_sel_click() {} 
 function cpo2_13_desel_click() { show( cp_char_dev_2_desel ); hide( cp_char_dev_2_sel ); show( 'cpo2_13_sel' ); hide( 'cpo2_13_desel' );  cp_char_dev_2_sel = 'cpo2_13_sel'; cp_char_dev_2_desel = 'cpo2_13_desel'; preview( 'cpo_main2','../phil_assets/previsualization/character development/14_japanese_woman.png' );} 
@@ -1074,55 +1074,55 @@ function docload () { alert('s');document.getElementById('img_jsw3').style.visib
 <img id="cpo1_11_sel" src="../phil_assets/previsualization/character development/thumbnails/0_turn_around_red.png" alt="TheStudio" onclick="cpo1_11_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_12_desel" src="../phil_assets/previsualization/character\ development/thumbnails/1_blue_reporter_BW.png" alt="TheStudio" onclick="cpo1_12_desel_click();"  />
+<img id="cpo1_12_desel" src="../phil_assets/previsualization/character development/thumbnails/1_blue_reporter_BW.png" alt="TheStudio" onclick="cpo1_12_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_12_sel" src="../phil_assets/previsualization/character\ development/thumbnails/1_blue_reporter_red.png" alt="TheStudio" onclick="cpo1_12_sel_click();"  />
+<img id="cpo1_12_sel" src="../phil_assets/previsualization/character development/thumbnails/1_blue_reporter_red.png" alt="TheStudio" onclick="cpo1_12_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_13_desel" src="../phil_assets/previsualization/character\ development/thumbnails/2_blue_driver_BW.png" alt="TheStudio" onclick="cpo1_13_desel_click();"  />
+<img id="cpo1_13_desel" src="../phil_assets/previsualization/character development/thumbnails/2_blue_driver_BW.png" alt="TheStudio" onclick="cpo1_13_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_13_sel" src="../phil_assets/previsualization/character\ development/thumbnails/2_blue_driver_red.png" alt="TheStudio" onclick="cpo1_13_sel_click();"  />
+<img id="cpo1_13_sel" src="../phil_assets/previsualization/character development/thumbnails/2_blue_driver_red.png" alt="TheStudio" onclick="cpo1_13_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_14_desel" src="../phil_assets/previsualization/character\ development/thumbnails/3_blue_cop_BW.png" alt="TheStudio" onclick="cpo1_14_desel_click();"  />
+<img id="cpo1_14_desel" src="../phil_assets/previsualization/character development/thumbnails/3_blue_cop_BW.png" alt="TheStudio" onclick="cpo1_14_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_14_sel" src="../phil_assets/previsualization/character\ development/thumbnails/3_blue_cop_red.png" alt="TheStudio" onclick="cpo1_14_sel_click();"  />
+<img id="cpo1_14_sel" src="../phil_assets/previsualization/character development/thumbnails/3_blue_cop_red.png" alt="TheStudio" onclick="cpo1_14_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_21_desel" src="../phil_assets/previsualization/character\ development/thumbnails/4_pilot_cow_BW.png" alt="TheStudio" onclick="cpo1_21_desel_click();"  />
+<img id="cpo1_21_desel" src="../phil_assets/previsualization/character development/thumbnails/4_pilot_cow_BW.png" alt="TheStudio" onclick="cpo1_21_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_21_sel" src="../phil_assets/previsualization/character\ development/thumbnails/4_pilot_cow_red.png" alt="TheStudio" onclick="cpo1_21_sel_click();"  />
+<img id="cpo1_21_sel" src="../phil_assets/previsualization/character development/thumbnails/4_pilot_cow_red.png" alt="TheStudio" onclick="cpo1_21_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_22_desel" src="../phil_assets/previsualization/character\ development/thumbnails/5-balloon_head_BW.png" alt="TheStudio" onclick="cpo1_22_desel_click();"  />
+<img id="cpo1_22_desel" src="../phil_assets/previsualization/character development/thumbnails/5-balloon_head_BW.png" alt="TheStudio" onclick="cpo1_22_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_22_sel" src="../phil_assets/previsualization/character\ development/thumbnails/5-balloon_head_red.png" alt="TheStudio" onclick="cpo1_22_sel_click();"  />
+<img id="cpo1_22_sel" src="../phil_assets/previsualization/character development/thumbnails/5-balloon_head_red.png" alt="TheStudio" onclick="cpo1_22_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_23_desel" src="../phil_assets/previsualization/character\ development/thumbnails/6_green_demon_BW.png" alt="TheStudio" onclick="cpo1_23_desel_click();"  />
+<img id="cpo1_23_desel" src="../phil_assets/previsualization/character development/thumbnails/6_green_demon_BW.png" alt="TheStudio" onclick="cpo1_23_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_23_sel" src="../phil_assets/previsualization/character\ development/thumbnails/6_green_demon_red.png" alt="TheStudio" onclick="cpo1_23_sel_click();"  />
+<img id="cpo1_23_sel" src="../phil_assets/previsualization/character development/thumbnails/6_green_demon_red.png" alt="TheStudio" onclick="cpo1_23_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_24_desel" src="../phil_assets/previsualization/character\ development/thumbnails/7_bacteria_rows_BW.png" alt="TheStudio" onclick="cpo1_24_desel_click();"  />
+<img id="cpo1_24_desel" src="../phil_assets/previsualization/character development/thumbnails/7_bacteria_rows_BW.png" alt="TheStudio" onclick="cpo1_24_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_24_sel" src="../phil_assets/previsualization/character\ development/thumbnails/7_bacteria_rows_red.png" alt="TheStudio" onclick="cpo1_24_sel_click();"  />
+<img id="cpo1_24_sel" src="../phil_assets/previsualization/character development/thumbnails/7_bacteria_rows_red.png" alt="TheStudio" onclick="cpo1_24_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_31_desel" src="../phil_assets/previsualization/character\ development/thumbnails/8_bacteria_group_BW.png" alt="TheStudio" onclick="cpo1_31_desel_click();"  />
+<img id="cpo1_31_desel" src="../phil_assets/previsualization/character development/thumbnails/8_bacteria_group_BW.png" alt="TheStudio" onclick="cpo1_31_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_31_sel" src="../phil_assets/previsualization/character\ development/thumbnails/8_bacteria_group_red.png" alt="TheStudio" onclick="cpo1_31_sel_click();"  />
+<img id="cpo1_31_sel" src="../phil_assets/previsualization/character development/thumbnails/8_bacteria_group_red.png" alt="TheStudio" onclick="cpo1_31_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo1_32_desel" src="../phil_assets/previsualization/character\ development/thumbnails/9_blue_monster_BW.png" alt="TheStudio" onclick="cpo1_32_desel_click();"  />
+<img id="cpo1_32_desel" src="../phil_assets/previsualization/character development/thumbnails/9_blue_monster_BW.png" alt="TheStudio" onclick="cpo1_32_desel_click();"  />
 </a>
 <a href="#" >
 <img id="cpo1_32_sel" src="../phil_assets/previsualization/character development/thumbnails/9_blue_monster_red.png" alt="TheStudio" onclick="cpo1_32_sel_click();"  />
@@ -1200,34 +1200,34 @@ function docload () { alert('s');document.getElementById('img_jsw3').style.visib
 <img id="cpo2_23_sel" src="../phil_assets/previsualization/character\ development/thumbnails/18.model_sheet_red.png" alt="TheStudio" onclick="cpo2_23_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_24_desel" src="../phil_assets/previsualization/character\ development/thumbnails/19_grandparents_BW.png" alt="TheStudio" onclick="cpo2_24_desel_click();"  />
+<img id="cpo2_24_desel" src="../phil_assets/previsualization/character development/thumbnails/19_grandparents_BW.png" alt="TheStudio" onclick="cpo2_24_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_24_sel" src="../phil_assets/previsualization/character\ development/thumbnails/19_grandparents_red.png" alt="TheStudio" onclick="cpo2_24_sel_click();"  />
+<img id="cpo2_24_sel" src="../phil_assets/previsualization/character development/thumbnails/19_grandparents_red.png" alt="TheStudio" onclick="cpo2_24_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_31_desel" src="../phil_assets/previsualization/character\ development/thumbnails/20_brown_monster_BW.png" alt="TheStudio" onclick="cpo2_31_desel_click();"  />
+<img id="cpo2_31_desel" src="../phil_assets/previsualization/character development/thumbnails/20_brown_monster_BW.png" alt="TheStudio" onclick="cpo2_31_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_31_sel" src="../phil_assets/previsualization/character\ development/thumbnails/20_brown_monster_red.png" alt="TheStudio" onclick="cpo2_31_sel_click();"  />
+<img id="cpo2_31_sel" src="../phil_assets/previsualization/character development/thumbnails/20_brown_monster_red.png" alt="TheStudio" onclick="cpo2_31_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_32_desel" src="../phil_assets/previsualization/character\ development/thumbnails/21_dust_bunny_BW.png" alt="TheStudio" onclick="cpo2_32_desel_click();"  />
+<img id="cpo2_32_desel" src="../phil_assets/previsualization/character development/thumbnails/21_dust_bunny_BW.png" alt="TheStudio" onclick="cpo2_32_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_32_sel" src="../phil_assets/previsualization/character\ development/thumbnails/21_dust_bunny_red.png" alt="TheStudio" onclick="cpo2_32_sel_click();"  />
+<img id="cpo2_32_sel" src="../phil_assets/previsualization/character development/thumbnails/21_dust_bunny_red.png" alt="TheStudio" onclick="cpo2_32_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_33_desel" src="../phil_assets/previsualization/character\ development/thumbnails/22-pig_BW.png" alt="TheStudio" onclick="cpo2_33_desel_click();"  />
+<img id="cpo2_33_desel" src="../phil_assets/previsualization/character development/thumbnails/22-pig_BW.png" alt="TheStudio" onclick="cpo2_33_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_33_sel" src="../phil_assets/previsualization/character\ development/thumbnails/22-pig_red.png" alt="TheStudio" onclick="cpo2_33_sel_click();"  />
+<img id="cpo2_33_sel" src="../phil_assets/previsualization/character development/thumbnails/22-pig_red.png" alt="TheStudio" onclick="cpo2_33_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_34_desel" src="../phil_assets/previsualization/character\ development/thumbnails/23-Goodie_Meanie_BW.png" alt="TheStudio" onclick="cpo2_34_desel_click();"  />
+<img id="cpo2_34_desel" src="../phil_assets/previsualization/character development/thumbnails/23-Goodie_Meanie_BW.png" alt="TheStudio" onclick="cpo2_34_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_34_sel" src="../phil_assets/previsualization/character\ development/thumbnails/23-Goodie_Meanie_red.png" alt="TheStudio" onclick="cpo2_34_sel_click();"  />
+<img id="cpo2_34_sel" src="../phil_assets/previsualization/character development/thumbnails/23-Goodie_Meanie_red.png" alt="TheStudio" onclick="cpo2_34_sel_click();"  />
 </a>
 <a href=# >
 
