--- a/newsite/beta03/sneakpeek.html
+++ b/newsite/beta03/sneakpeek.html
@@ -267,7 +267,7 @@ visibility: hidden;
 <body><div>
 <script type="text/javascript" >
 
-function docload () { document.getElementById('img_sneakpeek').style.visibility = 'visible';document.getElementById('img_banner').style.visibility = 'visible';; } 
+function docload () { alert('s');document.getElementById('img_sneakpeek').style.visibility = 'visible';document.getElementById('img_banner').style.visibility = 'visible';; } 
 
  window.onload=docload;
 </script>
