--- a/newsite/beta03/airhead.html
+++ b/newsite/beta03/airhead.html
@@ -264,12 +264,44 @@ z-index: 1;
 border:none; 
 visibility: hidden;
 }
+#img_facebook {
+position: absolute;
+left: 1012px;
+top: 485px;
+z-index: 3;
+border:none; 
+visibility: hidden;
+}
+#img_twitter {
+position: absolute;
+left: 1043px;
+top: 485px;
+z-index: 3;
+border:none; 
+visibility: hidden;
+}
+#img_pinterest {
+position: absolute;
+left: 1075px;
+top: 485px;
+z-index: 3;
+border:none; 
+visibility: hidden;
+}
+#img_tumblr {
+position: absolute;
+left: 1106px;
+top: 485px;
+z-index: 3;
+border:none; 
+visibility: hidden;
+}
 </style>
 </head>
 <body><div>
 <script type="text/javascript" >
 
-function docload () { document.getElementById('mov_airhead').style.visibility='visible';document.getElementById('img_gagl').style.visibility = 'visible';document.getElementById('img_gagr').style.visibility = 'visible';document.getElementById('img_frame').style.visibility = 'visible';document.getElementById('img_xboxlol').style.visibility = 'visible';; } 
+function docload () { alert('s');document.getElementById('mov_airhead').style.visibility='visible';document.getElementById('img_gagl').style.visibility = 'visible';document.getElementById('img_gagr').style.visibility = 'visible';document.getElementById('img_frame').style.visibility = 'visible';document.getElementById('img_xboxlol').style.visibility = 'visible';document.getElementById('img_facebook').style.visibility = 'visible';document.getElementById('img_twitter').style.visibility = 'visible';document.getElementById('img_pinterest').style.visibility = 'visible';document.getElementById('img_tumblr').style.visibility = 'visible';; } 
 
  window.onload=docload;
 </script>
@@ -357,6 +389,26 @@ function docload () { document.getElementById('mov_airhead').style.visibility='v
 <a href=animation.html >
 
 <img id="img_xboxlol" src="assets/pages/strybrd_artists/strybrd_artists_xboxlol.png" onmouseover="" onmouseout="" alt="TheStudio" >
+</a>
+
+<a href=# >
+
+<img id="img_facebook" src="assets/main/assets_general/moving/social_f.png" onmouseover="" onmouseout="" alt="TheStudio" >
+</a>
+
+<a href=# >
+
+<img id="img_twitter" src="assets/main/assets_general/moving/social_t.png" onmouseover="" onmouseout="" alt="TheStudio" >
+</a>
+
+<a href=# >
+
+<img id="img_pinterest" src="assets/main/assets_general/moving/social_p.png" onmouseover="" onmouseout="" alt="TheStudio" >
+</a>
+
+<a href=# >
+
+<img id="img_tumblr" src="assets/main/assets_general/moving/social_tumblr.png" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 
