--- a/newsite/beta03/home.html
+++ b/newsite/beta03/home.html
@@ -244,7 +244,7 @@ visibility: hidden;
 <body><div>
 <script type="text/javascript" >
 
-function docload () { document.getElementById('mov_home_reel').style.visibility='visible';; } 
+function docload () { alert('s');document.getElementById('mov_home_reel').style.visibility='visible';; } 
 
  window.onload=docload;
 </script>
