--- a/newsite/beta04/bumbleville.html
+++ b/newsite/beta04/bumbleville.html
@@ -289,12 +289,20 @@ z-index: 3;
 border:none; 
 visibility: hidden;
 }
+#img_bumbleville_caption_big {
+position: absolute;
+left: 1008px;
+top: 335px;
+z-index: 1;
+border:none; 
+visibility: hidden;
+}
 </style>
 </head>
 <body><div>
 <script type="text/javascript" >
 
-function docload () { document.getElementById('mov_bumbleville_vimeo').style.visibility='visible';document.getElementById('img_gagl').style.visibility = 'visible';document.getElementById('img_gagr').style.visibility = 'visible';document.getElementById('img_frame').style.visibility = 'visible';document.getElementById('img_xboxlol').style.visibility = 'visible';document.getElementById('img_facebook').style.visibility = 'visible';document.getElementById('img_twitter').style.visibility = 'visible';document.getElementById('img_pinterest').style.visibility = 'visible';document.getElementById('img_tumblr').style.visibility = 'visible';; } 
+function docload () { document.getElementById('mov_bumbleville_vimeo').style.visibility='visible';document.getElementById('img_gagl').style.visibility = 'visible';document.getElementById('img_gagr').style.visibility = 'visible';document.getElementById('img_frame').style.visibility = 'visible';document.getElementById('img_xboxlol').style.visibility = 'visible';document.getElementById('img_facebook').style.visibility = 'visible';document.getElementById('img_twitter').style.visibility = 'visible';document.getElementById('img_pinterest').style.visibility = 'visible';document.getElementById('img_tumblr').style.visibility = 'visible';document.getElementById('img_bumbleville_caption_big').style.visibility = 'visible';; } 
 
  window.onload=docload;
 </script>
@@ -374,7 +382,7 @@ function docload () { document.getElementById('mov_bumbleville_vimeo').style.vis
 
 <a href=# >
 
-<img id="img_frame" src="assets/pages/strybrd_artists/strybrd_artists_frame.png" onmouseover="" onmouseout="" alt="TheStudio" >
+<img id="img_frame" src="assets/main/assets_general/stationary/semiborder_b.png" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 <a href=animation.html >
@@ -399,7 +407,12 @@ function docload () { document.getElementById('mov_bumbleville_vimeo').style.vis
 
 <a href=# >
 
-<img id="img_tumblr" src="assets/main/assets_general/moving/social_s.png" onmouseover="" onmouseout="" alt="TheStudio" >
+<img id="img_tumblr" src="assets/main/assets_general/moving/social_tumblr.png" onmouseover="" onmouseout="" alt="TheStudio" >
+</a>
+
+<a href=# >
+
+<img id="img_bumbleville_caption_big" src="../captions/Animation/01_bumbleville.png" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 
