--- a/newsite/beta04/char_dev.html
+++ b/newsite/beta04/char_dev.html
@@ -943,12 +943,12 @@ function docload () { document.getElementById('img_jsw3').style.visibility = 'hi
 
 <a href=# >
 
-<img id="img_gagl1" src="assets/main/assets_general/moving/arrow_l_g.png" onmouseover="" onmouseout="" alt="TheStudio" >
+<img id="img_gagl1" src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_char_dev_2 ();" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 <a href=# >
 
-<img id="img_gagr1" src="assets/main/assets_general/moving/arrow_r_g.png" onmouseover="" onmouseout="" alt="TheStudio" >
+<img id="img_gagr1" src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_char_dev_2 ();" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 </div>
@@ -991,10 +991,10 @@ function docload () { document.getElementById('img_jsw3').style.visibility = 'hi
 <img id="cpo2_22_sel" src="../phil_assets/previsualization/character development/thumbnails/17_monster_duo_red.png" alt="TheStudio" onclick="cpo2_22_sel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_23_desel" src="../phil_assets/previsualization/character\ development/thumbnails/18.model_sheet_BW.png" alt="TheStudio" onclick="cpo2_23_desel_click();"  />
+<img id="cpo2_23_desel" src="../phil_assets/previsualization/character development/thumbnails/18.model_sheet_BW.png" alt="TheStudio" onclick="cpo2_23_desel_click();"  />
 </a>
 <a href="#" >
-<img id="cpo2_23_sel" src="../phil_assets/previsualization/character\ development/thumbnails/18.model_sheet_red.png" alt="TheStudio" onclick="cpo2_23_sel_click();"  />
+<img id="cpo2_23_sel" src="../phil_assets/previsualization/character development/thumbnails/18.model_sheet_red.png" alt="TheStudio" onclick="cpo2_23_sel_click();"  />
 </a>
 <a href="#" >
 <img id="cpo2_24_desel" src="../phil_assets/previsualization/character development/thumbnails/19_grandparents_BW.png" alt="TheStudio" onclick="cpo2_24_desel_click();"  />
@@ -1033,12 +1033,12 @@ function docload () { document.getElementById('img_jsw3').style.visibility = 'hi
 
 <a href=# >
 
-<img id="img_gagl2" src="assets/main/assets_general/moving/arrow_l_g.png" onmouseover="" onmouseout="" alt="TheStudio" >
+<img id="img_gagl2" src="assets/main/assets_general/moving/arrow_l_g.png" onclick="func_ss_char_dev_1 ();" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 <a href=# >
 
-<img id="img_gagr2" src="assets/main/assets_general/moving/arrow_r_g.png" onmouseover="" onmouseout="" alt="TheStudio" >
+<img id="img_gagr2" src="assets/main/assets_general/moving/arrow_r_g.png" onclick="func_ss_char_dev_1 ();" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 </div>
