--- a/newsite/beta04/etrade.html
+++ b/newsite/beta04/etrade.html
@@ -367,14 +367,14 @@ function docload () { document.getElementById('mov_etrade_vimeo').style.visibili
 <img id="img_gagl" src="assets/pages/strybrd_artists/arrow_l_g.png" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
-<a href=bumbleville.html >
+<a href=interactive.html >
 
 <img id="img_gagr" src="assets/pages/strybrd_artists/arrow_r_g.png" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 <a href=# >
 
-<img id="img_frame" src="assets/pages/strybrd_artists/strybrd_artists_frame.png" onmouseover="" onmouseout="" alt="TheStudio" >
+<img id="img_frame" src="assets/main/assets_general/stationary/semiborder_b.png" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 <a href=animation.html >
@@ -399,7 +399,7 @@ function docload () { document.getElementById('mov_etrade_vimeo').style.visibili
 
 <a href=# >
 
-<img id="img_tumblr" src="assets/main/assets_general/moving/social_s.png" onmouseover="" onmouseout="" alt="TheStudio" >
+<img id="img_tumblr" src="assets/main/assets_general/moving/social_tumblr.png" onmouseover="" onmouseout="" alt="TheStudio" >
 </a>
 
 
